tests/neg-inline-trait/disallow-export-in-inline-trait.scala
inline trait Foo:
    export Predef.* // error